@@ -70,6 +70,7 @@ public abstract class BaseDotGenerator implements IDotGenerator {
 	}
 
 	
+	/** In this base class, it just records the given URI */
 	public void loadModel(String ontUri) {
 		this._ontUri = ontUri;
 	}
@@ -138,7 +139,8 @@ public abstract class BaseDotGenerator implements IDotGenerator {
 	 * @param writer 
 	 */
 	protected void generateHeader(String... header) {
-		pw.println("# generated by " +this.getClass().getName()+ " on " +new Date());
+		Date date = new Date();
+		pw.println("# generated by " +this.getClass().getName()+ " on " +date);
 		if ( header != null ) {
 			for ( String line : header ) {
 				line = "# " + line.replaceAll("\n", "\n# ");
@@ -146,12 +148,28 @@ public abstract class BaseDotGenerator implements IDotGenerator {
 			}
 		}
 		
+		String generatedByLabel = "Input: " +_ontUri+ "\\l";
+
+		String ontVersion = getOntologyVersionInfo();
+		if ( ontVersion != null ) {
+			ontVersion = ontVersion.replaceAll("\n", "\\l\\\n");
+			generatedByLabel += "\\\n" + ontVersion + "\\l\\\n";
+		}
+		
+		generatedByLabel += "\\r\\\nGenerated by ont2dot on " +date+ "\\r";
+		
 		pw.println();
 		pw.println("digraph {");
 		
+		pw.println(
+				"\"__generated_by__\"  [ fontname=\"helvetica\", fontsize=8, shape=box, label=\"\\\n" +     
+				generatedByLabel+ "\" ]\n"
+		);
 
 	}
 
+	protected abstract String getOntologyVersionInfo();
+	
 	/**
 	 * Closes the dot contents.
 	 * @param writer 
