@@ -1,5 +1,8 @@
 MMI Ont2Dot ChangeLog
 
+2010-05-23
+	- include a "generated by" box with name and version of input ontology.
+	
 2010-05-22
 	- "Any" used as a range (ie., RDFS:Resource) when not explicitly given for a property.
 	
